--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,6 @@ matrix:
   include:
     - php: 5.6
       env: WP_VERSION=latest WP_MULTISITE=0 WP_PULUGIN_DEPLOY=1
+
+script:
+    - composer test
