--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 language: php
 
 notifications:
@@ -27,5 +25,14 @@ matrix:
     - php: 5.6
       env: WP_VERSION=latest WP_MULTISITE=0 WP_PULUGIN_DEPLOY=1
 
-script:
-    - composer test
+before_script:
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - |
+    if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
+      composer global require "phpunit/phpunit=5.7.*"
+    elif [[ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]]; then
+      composer global require "phpunit/phpunit=4.8.*"
+    fi
+  - bash bin/install-wp-tests.sh wordpress root '' localhost $WP_VERSION
+
+script: phpunit
